--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,9 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Maonan Wang / 王茂南"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PhD student, CUHK(SZ)"
   location         : "China"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  email            : "221019954@link.cuhk.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
